--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,9 +18,9 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps: 
-    - uses: action/checkout@v2 
+    - uses: actions/checkout@v2 
     - name: Set up Python 3.9
-      uses: action/setup-python@v2 
+      uses: actions/setup-python@v2 
       with: 
         python-version: 3.9
 
@@ -31,10 +31,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - uses: harmon758/posgresql-action@v1
-      with: 
-        postgresql version: 'l1'
 
     - name: Run migrations 
       run: python manage.py migrate
