--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,14 +1,16 @@
-name: Python application 
+name: Python application
+
 on: [push]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
-    services: 
+    services:
       postgres:
         image: postgres:latest
-        env: 
+        env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: django-ml
@@ -17,23 +19,17 @@ jobs:
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-    steps: 
-    - uses: actions/checkout@v2 
+    steps:
+    - uses: actions/checkout@v2
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2 
-      with: 
+      uses: actions/setup-python@v2
+      with:
         python-version: 3.9
-
-    - name: pyscopg2 prerequirities
-      run: sudo apt-get install libpq-dev
-
-    - name: Install Dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install micropython-msilib
         pip install -r requirements.txt
-
-    - name: Run migrations 
+    - name: Run migrations
       run: python manage.py migrate
-    - name: Run test
+    - name: Run tests
       run: python manage.py test
