--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Run migrations 
       run: python manage.py migrate
     - name: Run test
-      run: py.test
+      run: python manage.py test
